# Stove_Controller

./: LICENSE
Firmware/: CMakeLists.txt  export.sh  sdkconfig  sdkconfig.defaults
Firmware/main/: CMakeLists.txt  alarm_time.c  alarm_time.h  bumprts  bumprts.c  cooktimers.cpp  cooktimers.h  day_of_week.c  day_of_week.h  httpd.c  httpd.h  i2c.c  i2c.h  led.c  led.h  main.c  mcp9600.c  mcp9600.h  rx8900.c  rx8900.h  sht3x.c  sht3x.h  stovectrl.cpp  stovectrl.h  urldecode.c  urldecode.h  wifi.h  wifi_ap.c  wifi_prov.c  wifi_scan.c  wifi_sta.c
Firmware/main/web/: get_state.json  get_timers.json  index.html  javascript.js  site.webmanifest  styles.css  test_server.py
rev1/: ParentsStove.kicad_pcb  ParentsStove.kicad_prl  ParentsStove.kicad_pro  ParentsStove.kicad_sch  ParentsStove.kicad_sch-bak  SPDT_Relay.kicad_sch  SPST_Relay.kicad_sch  fp-info-cache  sym-lib-table
rev1/lib/: ESP32-S2-WROOM.kicad_mod  ESP32-S2-WROOM.kicad_sym  G5RL_U1_E.stp  IN-PI33TBTPRPGPB.kicad_mod  J114AF1C.kicad_mod  MCP9600-E_MX.kicad_sym  PCC-SMP.kicad_mod  ThermocoupleShielded.kicad_sym
rev2/: ParentsStove.kicad_pcb  ParentsStove.kicad_prl  ParentsStove.kicad_pro  ParentsStove.kicad_sch  StoveRelays.kicad_pcb  StoveRelays.kicad_prl  StoveRelays.kicad_pro  StoveRelays.kicad_sch  ac_gpio.kicad_sch  element.kicad_sch  fp-info-cache  motors.kicad_sch
rev2/bom/: ibom.html
rev2/lib/: 010085091.kicad_mod  010085091.stp  1-1123723-9.stp  6-1123723-7.stp  726386-2.stp  ESP32-S2-WROOM.kicad_mod  ESP32-S2-WROVER.stp  G5Q-1A4-EL3-HA DC5.stp  IM-J-PCB.kicad_mod  IN-PI33TBTPRPGPB.kicad_sym  (+4 more)
(+31 files in other folders)
